--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "typescript": "^5.0.4"
   },
@@ -13,7 +15,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
   "description": "",
   "devDependencies": {
     "@types/pg": "^8.6.6",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.6"
   }
 }
